--- a/Demo1/search_results.html
+++ b/Demo1/search_results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="https://fonts.googleapis.com/css?family=Baloo+Thambi" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Baloo+Thambi" rel="stylesheet">
 		<link href="stylesheet.css" rel="stylesheet">
 	</head>
 	<body>
@@ -12,8 +12,28 @@
 		</div>
 		<div class="search-result">
 			<h1>Search Results:</h1>
-			<p>John Doe<p>
-			<P>Jon Smith</P>
+			<ul>
+  			<li>
+					<p> Family Practice </p>
+					<p> John Doe </p>
+					<p> 6 Highfield Lawns Swords ,County Dublin </p>
+					<p> Telephone: 083 123 4566 </p>
+					<img src="download.jpg" alt="">
+
+				</li>
+  			<li>
+					<p> General Practitioner </p>
+					<p> John Smith </p>
+					<p> Coach Lodge Rear 59 Rathgar Ave Dublin 6, Dublin </p>
+					<p> Telephone: 085 987 5656 </p>
+					<img src="doctor2.png" alt="">
+
+				</li>
+  			<li>
+
+
+				</li>
+			</ul>
 		</div>
 	</body>
 </html>
