--- a/Benno/sendDataToDB/index.html
+++ b/Benno/sendDataToDB/index.html
@@ -12,5 +12,15 @@
       <input type="text" name="lastName" placeholder="Enter last name..." required>
       <input type="submit" value="Add Name">
     </form>
+
+    <div class="home">
+
+      <form method="post">
+        <textarea class="text" cols="80" rows ="20" name="newDocument"></textarea>
+        <br/>
+        <input type="submit" value="Add" class="submitButton">
+      </form>
+    </div>
+
   </body>
 </html>
